--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(0, 0, 0);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(0, 0, 0);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(180, 143, 143);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -61,8 +61,7 @@ p {
     border: 3px solid green;
 }
 
-.categoria h2 {
-    color: rgb(42, 122, 228);
+.categ(240, 230, 240);
 }
   </style>
     <link rel="stylesheet" href="styles.css">
